--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.1",
+    "@vueuse/core": "^10.7.2",
     "ky": "^1.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
